Issues fixed + ChipGroup + meeting details displayed

--- a/app/src/main/res/layout-large/fragment_add_meeting.xml
+++ b/app/src/main/res/layout-large/fragment_add_meeting.xml
@@ -31,6 +31,7 @@
                     android:id="@+id/topic_et"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:backgroundTint="@color/bckgrnd"
                     android:drawablePadding="16dp"
                     android:gravity="center_vertical"
                     android:hint="@string/meeting_topic"
@@ -61,6 +62,7 @@
                     android:id="@+id/attendees_et"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:backgroundTint="@color/bckgrnd"
                     android:drawablePadding="16dp"
                     android:gravity="center_vertical"
                     android:hint="@string/meeting_attendees"
@@ -74,19 +76,52 @@
                     app:drawableStartCompat="@drawable/baseline_groups_black_36"
                     app:drawableTint="@color/field" />
 
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/add_attendee_btn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="16dp"
+                    android:backgroundTint="#e2dddc"
+                    android:minWidth="48dp"
+                    android:minHeight="48dp"
+                    android:text="@string/add"
+                    android:textColor="@color/field"
+                    android:textSize="16sp"
+                    app:backgroundTint="@color/bckgrnd" />
+
             </com.google.android.material.textfield.TextInputLayout>
+
+            <FrameLayout
+                android:id="@+id/chip_group_layout"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="24dp"
+                android:layout_marginEnd="16dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/attendees_til">
+
+                <com.google.android.material.chip.ChipGroup
+                    android:id="@+id/attendees_chip_group"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:chipSpacingVertical="16dp" />
+
+            </FrameLayout>
 
             <FrameLayout
                 android:id="@+id/time_layout"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="24dp"
+                android:layout_marginTop="32dp"
                 android:layout_marginEnd="16dp"
-                android:background="#e2dddc"
+                android:background="@color/bckgrnd"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/attendees_til">
+                app:layout_constraintTop_toBottomOf="@id/chip_group_layout">
 
                 <TextView
                     android:id="@+id/time_picker"
@@ -113,7 +148,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="32dp"
                 android:layout_marginEnd="16dp"
-                android:background="#e2dddc"
+                android:background="@color/bckgrnd"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/time_layout">
