--- a/app/src/main/res/layout-small/fragment_meeting_details.xml
+++ b/app/src/main/res/layout-small/fragment_meeting_details.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,7 +9,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <ImageView
             android:id="@+id/room_icon"
@@ -20,7 +20,7 @@
             android:layout_marginEnd="2dp"
             android:layout_marginBottom="2dp"
             android:contentDescription="@string/room_icon"
-            android:src="@drawable/baseline_radio_button_unchecked_24"
+            android:src="@drawable/mario"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -38,28 +38,32 @@
             app:layout_constraintStart_toEndOf="@id/room_icon"
             app:layout_constraintTop_toTopOf="@id/room_icon" />
 
-        <TextView
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/meeting_attendees"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="2dp"
-            android:text="@string/meeting_attendees"
+            android:layout_marginTop="2dp"
+            android:backgroundTint="@color/bckgrnd"
+            android:minWidth="48dp"
+            android:minHeight="48dp"
+            android:text="@string/meeting_attendees2"
             android:textColor="@color/field"
             android:textSize="11sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/room_icon" />
 
-        <com.google.android.material.chip.ChipGroup
+        <TextView
             android:id="@+id/meeting_attendees_details"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_margin="2dp"
-            app:chipSpacingVertical="2dp"
+            android:textColor="@color/field"
+            android:textSize="11sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/meeting_attendees" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-</FrameLayout>
+</ScrollView>
