--- a/app/src/main/res/layout-sw600dp/meeting_item.xml
+++ b/app/src/main/res/layout-sw600dp/meeting_item.xml
@@ -18,7 +18,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="24dp"
             android:contentDescription="@string/room_icon"
-            android:src="@drawable/baseline_radio_button_unchecked_24"
+            android:src="@drawable/mario"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
