--- a/app/src/main/res/menu/menu_activity_meetings.xml
+++ b/app/src/main/res/menu/menu_activity_meetings.xml
@@ -3,15 +3,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/meetings_menu_room_filter"
-        android:icon="@drawable/baseline_filter_list_24"
+        android:icon="@drawable/baseline_meeting_room_24"
         android:title="@string/room_filter"
+        app:actionViewClass="androidx.appcompat.widget.SearchView"
         app:iconTint="@color/white"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="ifRoom|collapseActionView" />
 
     <item
         android:id="@+id/meetings_menu_time_filter"
         android:icon="@drawable/baseline_av_timer_24"
         android:title="@string/time_filter"
+        app:actionViewClass="androidx.appcompat.widget.SearchView"
         app:iconTint="@color/white"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="ifRoom|collapseActionView" />
 </menu>
