--- a/app/src/main/res/layout-normal/activity_meetings.xml
+++ b/app/src/main/res/layout-normal/activity_meetings.xml
@@ -29,7 +29,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="68dp"
+            android:layout_marginTop="58dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
@@ -44,6 +44,8 @@
         android:layout_gravity="bottom|end"
         android:layout_margin="16dp"
         android:contentDescription="@string/add_meeting_fab"
+        android:minWidth="48dp"
+        android:minHeight="48dp"
         android:src="@drawable/ic_baseline_add_24"
         app:backgroundTint="@color/red_A400"
         app:tint="@color/white" />
