--- a/app/src/main/res/layout-sw600dp-land/fragment_add_meeting.xml
+++ b/app/src/main/res/layout-sw600dp-land/fragment_add_meeting.xml
@@ -177,6 +177,8 @@
         android:layout_gravity="end|bottom"
         android:layout_margin="32dp"
         android:contentDescription="@string/add_meeting_fab"
+        android:minWidth="48dp"
+        android:minHeight="48dp"
         android:src="@drawable/ic_baseline_check_24"
         app:backgroundTint="@color/red_A400"
         app:tint="@color/white" />
